--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,13 @@ html{
 
 
 body {
-    background: #080808;
+    background: #464141;
     color: #fff;
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/img/background.jpg);
     background-size:cover;
     background-position: right;
 }
@@ -51,7 +50,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #1495d1;
     position:absolute;
     left: 0;
     bottom: -6px;
@@ -63,14 +62,13 @@ nav ul li a:hover::after{
 }
 
 .header-text{
-    margin-top: 20%;
+    margin-top: 30%;
     font-size: 30px;
 }
 
 .header-text h1{
     font-size: 50px;
-    font-size: 50px;
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .text-box{
@@ -137,7 +135,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #1495d1;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -154,7 +152,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #b54769;
+    color: #1495d1;
     font-size: 14px;
 }
 
@@ -168,8 +166,8 @@ nav ul li a:hover::after{
 
 .below{
     text-align: center;
-    font-size: 25px;
-    padding: 35px;
+    font-size: 18px;
+    padding: 14px;
     margin-top: 15px;
 }
 
@@ -218,7 +216,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background: #ff004f;
+    background: #1495d1;
     transform: translateY(-10px);
 }
 
@@ -253,7 +251,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgb(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgb(0,0,0,0.6), #1495d1);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -277,7 +275,7 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #1495d1;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -300,7 +298,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #1495d1;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -309,7 +307,7 @@ nav ul li a:hover::after{
 }
 
 .btn:hover{
-    background: #ff004f;
+    background: #1495d1;
 }
 
 /*-------------------------contact-----------------*/
@@ -326,7 +324,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #ff004f;
+    color: #1495d1;
     margin-top: 15px;
     font-size: 25px;
 }
@@ -345,13 +343,13 @@ nav ul li a:hover::after{
 }
 
 .social-icons a:hover{
-    color: #ff004f;
+    color: #1495d1
     transform: translate(-5px);
 }
 
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #1495d1;
 }
 
 .contact-right form{
@@ -419,7 +417,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #1495d1;
         position: fixed;
         top: 0;
         right: -200px;
